<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <!-- Header aligned to top -->
    <RelativeLayout android:id="@+id/header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:background="#ffacd8ef" android:gravity="center">
        <TextView android:layout_width="wrap_content" android:layout_height="30dp" android:layout_margin="1dp" android:text="@string/str_header" android:textColor="#000000" android:textSize="20sp"/>
    </RelativeLayout>

    <!-- Footer aligned to bottom -->
    <RelativeLayout android:id="@+id/footer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:background="#ffacd8ef" android:gravity="center">
        <TextView android:layout_width="wrap_content" android:layout_height="30dp" android:layout_margin="5dp" android:text="@string/str_footer" android:textColor="#000000" android:textSize="20sp"/>
    </RelativeLayout>

    <!-- Scrollable Content below header and above footer -->
    <ScrollView android:id="@+id/container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/footer" android:layout_below="@id/header">
        <LinearLayout  android:layout_width="fill_parent" android:layout_height="fill_parent"  android:layout_gravity="center" android:gravity="center" android:orientation="vertical">
            <TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10dp"  android:text="@string/str_publickey1" android:gravity="center" android:textSize="14sp" android:textStyle="normal"/>
            <EditText android:id="@+id/layout_publickey_edittext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:digits="0,1,2,3,4,5,6,7,8,9,qwertzuiopasdfghjklyxcvbnm" android:hint="@string/str_publickey5"/>
            <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/str_publickey4" android:id="@+id/layout_publickey_btn_save"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>